--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,14 @@
 :root {
     --white: #ffffff;
     --off-white: #e5e5e5;
-    --transp-white-1: rgba(255, 255, 255, 0.25)
-    --transp-white-2: rgba(255, 255, 255, 0.1)
-    --blue-1: #62b8f5
+    --transp-white-1: rgba(255, 255, 255, 0.25);
+    --transp-white-2: rgba(255, 255, 255, 0.1);
+    --blue-1: #62b8f5;
+    --blue-2: #4475ef;
+    --shadow: rgba(3, 46, 87, 0.2);
+}
+
+body {
+    height: 100vh;
+    background: linear-gradient(135deg, var(--blue-1), var(--blue-2));
 }
